Frontend: update UI for test page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,3 +1,4 @@
-<!-- frontend/index.html -->
-<!-- Owned by frontend team -->
-<h1>Frontend starts here</h1>
+// owned by frontend team
+
+<h1>Frontend UI ready</h1>
+<p>This page will use the test route API</p>
