--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,5 @@
-// owned by frontend team
+<!-- owned by frontend team -->
+ <!-- assigned by project manager -->
 
 <h1>Frontend UI ready</h1>
 <p>This page will use the test route API</p>
